Onlieneshop: Update website design and functionality

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="preloader__inner">
             <div class="preloader__badge">
                 <span class="preloader__ring"></span>
-                <img src="https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606" alt="Hamburgpapier Preload Logo">
+                <img src="https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606" alt="Hamburgpapier Preload Logo" decoding="async" width="300" height="90">
             </div>
             <div class="preloader__progress">
                 <span class="preloader__progress-fill"></span>
@@ -69,7 +69,7 @@
     <header data-luxy="true">
         <div class="container nav">
             <a class="brand" href="https://sw6.hamburgpapier-shop.de/">
-                <img class="brand-logo" src="https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606" alt="Hamburgpapier Logo">
+                <img class="brand-logo" src="https://sw6.hamburgpapier-shop.de/media/c8/78/ef/1763899606/logo_hp_rz_breit_(1).png?ts=1763899606" alt="Hamburgpapier Logo" loading="lazy" decoding="async" width="300" height="90">
             </a>
             <a class="nav-shop" href="https://sw6.hamburgpapier-shop.de/">Online Shop</a>
             <button class="nav-toggle" aria-label="Menü öffnen" aria-expanded="false">
@@ -79,6 +79,7 @@
                 <a href="#about">Über Uns</a>
                 <a href="#faq">FAQ</a>
                 <a href="#produktion">Produktion</a>
+                <a href="#shop">Online Shop</a>
             </nav>
         </div>
     </header>
@@ -104,6 +105,11 @@
                     <span class="menu-overlay__eyebrow">[Über Uns]</span>
                     <span class="menu-overlay__text">Warum Hamburgpapier</span>
                     <span class="menu-overlay__cta">Mehr</span>
+                </a>
+                <a class="menu-overlay__item" href="#shop" data-accent="#4b6b8b">
+                    <span class="menu-overlay__eyebrow">[Online Shop]</span>
+                    <span class="menu-overlay__text">Produkte &amp; Staffelpreise</span>
+                    <span class="menu-overlay__cta">Zum Shop</span>
                 </a>
             </div>
         </div>
@@ -242,7 +248,7 @@
                 <div class="shop__header">
                     <p class="shop__eyebrow">Online Shop</p>
                     <h2>Produktion gesehen, jetzt im Shop bestellen</h2>
-                    <p class="shop__lead">Sie haben gesehen, wie wir Hygienepapier herstellen. Im Hamburgpapier Online Shop finden Sie sofort lieferbare Ware, klare Staffelpreise und schnelle Lieferung fuer Gastronomie, Pflege, Reinigung, Industrie und Hotel.</p>
+                    <p class="shop__lead">Sie haben gesehen, wie wir Hygienepapier herstellen. Im Hamburgpapier Online Shop finden Sie sofort lieferbare Ware, klare Staffelpreise und schnelle Lieferung für Gastronomie, Pflege, Reinigung, Industrie und Hotel.</p>
                     <div class="shop__actions">
                         <a class="btn btn-primary" href="https://sw6.hamburgpapier-shop.de/">Zum Online Shop</a>
                         <a class="btn btn-ghost" href="https://sw6.hamburgpapier-shop.de/">Sortiment entdecken</a>
@@ -251,76 +257,56 @@
 
                 <div class="shop-grid shop-grid--highlights">
                     <article class="shop-card" style="--card-accent: var(--primary)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--primary) 24%, #ffffff), color-mix(in srgb, var(--baltic) 26%, transparent));"></div>
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--primary) 24%, #ffffff), color-mix(in srgb, var(--baltic) 26%, transparent));">
+                            <img class="shop-card__img" src="Assents/toilettenpapier_800x800.avif" alt="Toilettenpapier" loading="lazy" decoding="async" width="800" height="800">
+                        </div>
                         <div class="shop-card__body">
-                            <p class="shop-card__eyebrow">Toilettenpapier</p>
-                            <h3 class="shop-card__title">Jumbo- &amp; Midi-Rollen</h3>
-                            <p class="shop-card__desc">2- und 3-lagig, perforiert, gepraegt. Staubarm, kompatibel mit gaengigen Spenderkernen.</p>
-                            <div class="shop-card__price">ab 12,90 EUR / VPE &middot; Staffel ab 10 VPE</div>
-                            <div class="shop-card__tags">
-                                <span class="shop-card__tag">Recycling &amp; Frischfaser</span>
-                                <span class="shop-card__tag">48h Versand</span>
-                            </div>
+                            <h3 class="shop-card__title">Toilettenpapier</h3>
+                            <p class="shop-card__desc">2- und 3-lagig, perforiert, geprägt. Staubarm, kompatibel mit gängigen Spenderkernen.</p>
                             <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=toilettenpapier">Jetzt ansehen</a>
                         </div>
                     </article>
 
                     <article class="shop-card" style="--card-accent: var(--info)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--info) 22%, #ffffff), color-mix(in srgb, var(--baltic) 18%, transparent));"></div>
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--info) 22%, #ffffff), color-mix(in srgb, var(--baltic) 18%, transparent));">
+                            <img class="shop-card__img" src="Assents/papierhandtuecher_800x800.avif" alt="Papierhandtücher" loading="lazy" decoding="async" width="800" height="800">
+                        </div>
                         <div class="shop-card__body">
-                            <p class="shop-card__eyebrow">Papierhandtuecher</p>
-                            <h3 class="shop-card__title">Z- / C-Falz</h3>
-                            <p class="shop-card__desc">Weiche, saugfaehige Tuecher fuer Waschromme und Gaeste-WCs. Helle Qualitaeten, hygienisch verpackt.</p>
-                            <div class="shop-card__price">ab 14,50 EUR / Karton &middot; Staffel ab 8 Kartons</div>
-                            <div class="shop-card__tags">
-                                <span class="shop-card__tag">Staubarm</span>
-                                <span class="shop-card__tag">FSC/PEFC</span>
-                            </div>
+                            <h3 class="shop-card__title">Papierhandtücher</h3>
+                            <p class="shop-card__desc">Weiche, saugfähige Tücher für Waschräume und Gäste-WCs. Helle Qualitäten, hygienisch verpackt.</p>
                             <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=papierhandt%C3%BCcher">Jetzt ansehen</a>
                         </div>
                     </article>
 
                     <article class="shop-card" style="--card-accent: var(--warning)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--warning) 18%, #ffffff), color-mix(in srgb, var(--baltic) 16%, transparent));"></div>
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--warning) 18%, #ffffff), color-mix(in srgb, var(--baltic) 16%, transparent));">
+                            <img class="shop-card__img" src="Assents/kuechenrollen_800x800.avif" alt="Küchenrollen" loading="lazy" decoding="async" width="800" height="800">
+                        </div>
                         <div class="shop-card__body">
-                            <p class="shop-card__eyebrow">Kuechenrollen</p>
-                            <h3 class="shop-card__title">Wischtuecher fuer Kueche</h3>
-                            <p class="shop-card__desc">Fettaufnehmend und reissfest, 2-3-lagig. Ideal fuer Gastronomie und Catering.</p>
-                            <div class="shop-card__price">ab 9,90 EUR / 32er-Paket &middot; Staffel ab 5 Paketen</div>
-                            <div class="shop-card__tags">
-                                <span class="shop-card__tag">Fettaufnahme+</span>
-                                <span class="shop-card__tag">Praktische Packs</span>
-                            </div>
+                            <h3 class="shop-card__title">Küchenrollen</h3>
+                            <p class="shop-card__desc">Fettaufnehmend und reißfest, 2–3-lagig. Ideal für Gastronomie und Catering.</p>
                             <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=k%C3%BCchenrollen">Jetzt ansehen</a>
                         </div>
                     </article>
 
                     <article class="shop-card" style="--card-accent: var(--success)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));"></div>
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));">
+                            <img class="shop-card__img" src="Assents/handtuchrollen_800x800.avif" alt="Handtuchrollen" loading="lazy" decoding="async" width="800" height="800">
+                        </div>
                         <div class="shop-card__body">
-                            <p class="shop-card__eyebrow">Handtuchrollen</p>
-                            <h3 class="shop-card__title">Spenderkompatibel</h3>
-                            <p class="shop-card__desc">Innen- und aussenabrollende Rollen, saugfaehig und sparsam im Verbrauch, passend zu Tork und Co.</p>
-                            <div class="shop-card__price">ab 18,90 EUR / Karton &middot; Staffel ab 6 Kartons</div>
-                            <div class="shop-card__tags">
-                                <span class="shop-card__tag">Innen-/Aussenabwicklung</span>
-                                <span class="shop-card__tag">Saugstark</span>
-                            </div>
+                            <h3 class="shop-card__title">Handtuchrollen</h3>
+                            <p class="shop-card__desc">Innen- und außenabrollende Rollen, saugfähig und sparsam im Verbrauch, passend zu Tork und Co.</p>
                             <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=handtuchrollen">Jetzt ansehen</a>
                         </div>
                     </article>
 
                     <article class="shop-card" style="--card-accent: var(--danger)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--danger) 18%, #ffffff), color-mix(in srgb, var(--baltic) 12%, transparent));"></div>
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--danger) 18%, #ffffff), color-mix(in srgb, var(--baltic) 12%, transparent));">
+                            <img class="shop-card__img" src="Assents/putzpapier-blau_800x800.avif" alt="Putzpapier" loading="lazy" decoding="async" width="800" height="800">
+                        </div>
                         <div class="shop-card__body">
-                            <p class="shop-card__eyebrow">Putzpapier</p>
-                            <h3 class="shop-card__title">Industrie &amp; Werkstatt</h3>
-                            <p class="shop-card__desc">Reissfest, nassstabil und staubarm fuer Maschinenparks, Produktion und Reinigungsteams.</p>
-                            <div class="shop-card__price">ab 16,50 EUR / Doppelrolle &middot; Staffel ab 12 Rollen</div>
-                            <div class="shop-card__tags">
-                                <span class="shop-card__tag">Nassfest</span>
-                                <span class="shop-card__tag">Low-Lint</span>
-                            </div>
+                            <h3 class="shop-card__title">Putzpapier</h3>
+                            <p class="shop-card__desc">Reißfest, nassstabil und staubarm für Maschinenparks, Produktion und Reinigungsteams.</p>
                             <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=putzpapier">Jetzt ansehen</a>
                         </div>
                     </article>
@@ -521,3 +507,6 @@
 
 </body>
 </html>
+
+
+
