navigation updated to include new sections

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </a>
                 <a class="menu-overlay__item" href="#shop" data-accent="#4b6b8b">
                     <span class="menu-overlay__eyebrow">[Online Shop]</span>
-                    <span class="menu-overlay__text">Produkte &amp; Staffelpreise</span>
+                    <span class="menu-overlay__text">Online Shop</span>
                     <span class="menu-overlay__cta">Zum Shop</span>
                 </a>
             </div>
