Product Bugfix: Corrected typo in index.html

--- a/index.html
+++ b/index.html
@@ -256,25 +256,25 @@
                 </div>
 
                 <div class="shop-grid shop-grid--highlights">
-                    <article class="shop-card" style="--card-accent: var(--info)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--info) 22%, #ffffff), color-mix(in srgb, var(--baltic) 18%, transparent));">
+                    <article class="shop-card" style="--card-accent: var(--success)">
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));">
                             <img class="shop-card__img" src="Assents/papierhandtuecher_800x800.avif" alt="Papierhandtücher" loading="lazy" decoding="async" width="800" height="800">
                         </div>
                         <div class="shop-card__body">
                             <h3 class="shop-card__title">Papierhandtücher</h3>
                             <p class="shop-card__desc">Weiche, saugfähige Tücher für Waschräume und Gäste-WCs. Helle Qualitäten, hygienisch verpackt.</p>
-                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=papierhandt%C3%BCcher">Jetzt ansehen</a>
+                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/papierhandtuecher">Jetzt ansehen</a>
                         </div>
                     </article>
 
-                    <article class="shop-card" style="--card-accent: var(--warning)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--warning) 18%, #ffffff), color-mix(in srgb, var(--baltic) 16%, transparent));">
+                    <article class="shop-card" style="--card-accent: var(--success)">
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));">
                             <img class="shop-card__img" src="Assents/kuechenrollen_800x800.avif" alt="Küchenrollen" loading="lazy" decoding="async" width="800" height="800">
                         </div>
                         <div class="shop-card__body">
                             <h3 class="shop-card__title">Küchenrollen</h3>
                             <p class="shop-card__desc">Fettaufnehmend und reißfest, 2–3-lagig. Ideal für Gastronomie und Catering.</p>
-                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=k%C3%BCchenrollen">Jetzt ansehen</a>
+                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/toilettenpapier">Jetzt ansehen</a>
                         </div>
                     </article>
 
@@ -285,18 +285,18 @@
                         <div class="shop-card__body">
                             <h3 class="shop-card__title">Handtuchrollen</h3>
                             <p class="shop-card__desc">Innen- und außenabrollende Rollen, saugfähig und sparsam im Verbrauch, passend zu Tork und Co.</p>
-                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=handtuchrollen">Jetzt ansehen</a>
+                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/handtuchrollen">Jetzt ansehen</a>
                         </div>
                     </article>
 
-                    <article class="shop-card" style="--card-accent: var(--danger)">
-                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--danger) 18%, #ffffff), color-mix(in srgb, var(--baltic) 12%, transparent));">
+                    <article class="shop-card" style="--card-accent: var(--success)">
+                        <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));">
                             <img class="shop-card__img" src="Assents/putzpapier-blau_800x800.avif" alt="Putzpapier" loading="lazy" decoding="async" width="800" height="800">
                         </div>
                         <div class="shop-card__body">
                             <h3 class="shop-card__title">Putzpapier</h3>
                             <p class="shop-card__desc">Reißfest, nassstabil und staubarm für Maschinenparks, Produktion und Reinigungsteams.</p>
-                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/?search=putzpapier">Jetzt ansehen</a>
+                            <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/putzpapier-putzpapierrollen-blau">Jetzt ansehen</a>
                         </div>
                     </article>
                 </div>
