--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -121,7 +121,7 @@
             <video src="https://sw6.hamburgpapier-shop.de/media/69/1a/68/1763924613/Video%20Produktion.mp4?ts=1764256857" autoplay muted loop playsinline webkit-playsinline preload="auto"></video>
             <div class="hero__content">
                 <h1 class="hero-title">Hygienepapier-Produktion</h1>
-                <p class="hero-subtitle">Vom Zellstoff zur fertigen Rolle. Wir zeigen die wichtigsten Stationen der Herstellung - transparent, kompakt und praxisnah.</p>
+                <p class="hero-subtitle">Vom Zellstoff zur fertigen Rolle. Wir zeigen die wichtigsten Stationen der Herstellung. Transparent - kompakt - und praxisnah.</p>
             </div>
         </section>
 
@@ -249,22 +249,22 @@
                 <div class="shop-grid shop-grid--highlights">
                     <article class="shop-card" style="--card-accent: var(--success)">
                         <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));">
-                            <img class="shop-card__img" src="Assents/papierhandtuecher_800x800.avif" alt="Papierhandt&uuml;cher" loading="lazy" decoding="async" width="800" height="800">
+                            <img class="shop-card__img" src="Assents/papierhandtuecher_800x800.avif" alt="Papierhandtücher" loading="lazy" decoding="async" width="800" height="800">
                         </div>
                         <div class="shop-card__body">
-                            <h3 class="shop-card__title">Papierhandt&uuml;cher</h3>
-                            <p class="shop-card__desc">Weiche, saugf&auml;hige T&uuml;cher f&uuml;r Waschr&auml;ume und G&auml;ste-WCs. Helle Qualit&auml;ten, hygienisch verpackt.</p>
+                            <h3 class="shop-card__title">Papierhandtücher</h3>
+                            <p class="shop-card__desc">Weiche, saugfähige Tücher für Waschräume und Gäste-WCs. Helle Qualitäten, hygienisch verpackt.</p>
                             <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/papierhandtuecher">Jetzt ansehen</a>
                         </div>
                     </article>
 
                     <article class="shop-card" style="--card-accent: var(--success)">
                         <div class="shop-card__media" style="background-image: linear-gradient(135deg, color-mix(in srgb, var(--success) 22%, #ffffff), color-mix(in srgb, var(--baltic) 14%, transparent));">
-                            <img class="shop-card__img" src="Assents/kuechenrollen_800x800.avif" alt="K&uuml;chenrollen" loading="lazy" decoding="async" width="800" height="800">
+                            <img class="shop-card__img" src="Assents/kuechenrollen_800x800.avif" alt="Küchenrollen" loading="lazy" decoding="async" width="800" height="800">
                         </div>
                         <div class="shop-card__body">
-                            <h3 class="shop-card__title">K&uuml;chenrollen</h3>
-                            <p class="shop-card__desc">Fettaufnehmend und reissfest, 2-3-lagig. Ideal f&uuml;r Gastronomie und Catering.</p>
+                            <h3 class="shop-card__title">Küchenrollen</h3>
+                            <p class="shop-card__desc">Fettaufnehmend und reißfest, 2-3-lagig. Ideal für Gastronomie und Catering.</p>
                             <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/toilettenpapier">Jetzt ansehen</a>
                         </div>
                     </article>
@@ -275,7 +275,7 @@
                         </div>
                         <div class="shop-card__body">
                             <h3 class="shop-card__title">Handtuchrollen</h3>
-                            <p class="shop-card__desc">Innen- und aussenabrollende Rollen, saugf&auml;hig und sparsam im Verbrauch, passend zu Tork und Co.</p>
+                            <p class="shop-card__desc">Innen- und außenabrollende Rollen, saugfähig und sparsam im Verbrauch, passend zu Tork und Co.</p>
                             <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/handtuchrollen">Jetzt ansehen</a>
                         </div>
                     </article>
@@ -286,7 +286,7 @@
                         </div>
                         <div class="shop-card__body">
                             <h3 class="shop-card__title">Putzpapier</h3>
-                            <p class="shop-card__desc">Reissfest, nassstabil und staubarm f&uuml;r Maschinenparks, Produktion und Reinigungsteams.</p>
+                            <p class="shop-card__desc">Reißfest, nassstabil und staubarm für Maschinenparks, Produktion und Reinigungsteams.</p>
                             <a class="shop-card__cta" href="https://sw6.hamburgpapier-shop.de/putzpapier-putzpapierrollen-blau">Jetzt ansehen</a>
                         </div>
                     </article>
@@ -295,10 +295,10 @@
                 <div class="shop__offers">
                     <h3 class="shop__list-title">Wir bieten</h3>
                     <ul class="shop__list">
-                        <li>gleichbleibende Qualitaet</li>
+                        <li>gleichbleibende Qualität</li>
                         <li>klare Staffelpreise &amp; versandkostenfrei</li>
-                        <li>oekologische Produkte mit EU Ecolabel</li>
-                        <li>EUDR-Rueckverfolgbarkeit der Rohstoffe</li>
+                        <li>ökologische Produkte mit EU Ecolabel</li>
+                        <li>EUDR-Rückverfolgbarkeit der Rohstoffe</li>
                         <li>Palettenversand</li>
                         <li>Paketversand</li>
                         <li>schnelle Lieferung</li>
