upadted the index.html file to improve SEO and accessibility.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                     </div>
                                 </article>
                                 <article class="process-slide">
-                                    <video class="process-slide__image process-slide__video" src="Assents/trocknung-trockenzylinder.mp4" muted loop playsinline preload="auto"></video>
+                                    <video class="process-slide__image process-slide__video" src="Assents/trocknung-trockenzylinder..mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 3</div>
                                         <h3 class="process-slide__title">Trocknung</h3>
@@ -172,7 +172,7 @@
                                     </div>
                                 </article>
                                 <article class="process-slide">
-                                    <video class="process-slide__image process-slide__video" poster="Assents/6-poster.jpg" src="Assents/trocknung-papierbahn-trockenzylinder.mp4" muted loop playsinline preload="auto"></video>
+                                    <video class="process-slide__image process-slide__video" poster="Assents/6-poster.jpg" src="Assents/qualitaetskontrolle-mit-scanner..mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 5</div>
                                         <h3 class="process-slide__title">Qualitätskontrolle</h3>
@@ -188,7 +188,7 @@
                                     </div>
                                 </article>
                                 <article class="process-slide">
-                                    <video class="process-slide__image process-slide__video" poster="Assents/7-poster.jpg" src="Assents/wicklen-logs-saege-schneiden.mp4" muted loop playsinline preload="auto"></video>
+                                    <video class="process-slide__image process-slide__video" poster="Assents/7-poster.jpg" src="Assents/wicklen-logs-saege-schneiden..mp4" muted loop playsinline preload="auto"></video>
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 7</div>
                                         <h3 class="process-slide__title">Wickeln &amp; Schneiden</h3>
