--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                     <div class="process-slide__body">
                                         <div class="process-slide__step">Schritt 1</div>
                                         <h3 class="process-slide__title">Aufbereitung</h3>
-                                        <p class="process-slide__text">Zellstoff wird mit Wasser aufbereitet – es entsteht eine flüssige Fasersuspension.</p>
+                                        <p class="process-slide__text">Zellstoff - oder Recyclingrohware wird mit Wasser aufbereitet, es entsteht eine flüssige Fasersuspension.</p>
                                     </div>
                                 </article>
                                 <article class="process-slide">
